black py files and notebook

--- a/notebooks/Using_GPyOpt_to_tune_NN.ipynb
+++ b/notebooks/Using_GPyOpt_to_tune_NN.ipynb
@@ -31,7 +31,8 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\") # adds higher directory to python modules path\n",
+    "\n",
+    "sys.path.append(\"..\")  # adds higher directory to python modules path\n",
     "from GPyOpt.methods import BayesianOptimization\n",
     "import GPyOpt\n",
     "import torch\n",
@@ -45,7 +46,10 @@
     "from src import train as train\n",
     "from src import utils as utils\n",
     "from src import plotting as plotting\n",
-    "dev = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "\n",
+    "dev = (\n",
+    "    torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    ")\n",
     "print(torch.cuda.get_device_name(torch.cuda.current_device()))"
    ]
   },
@@ -84,14 +88,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_BO = [{'name': 'lr', 'type': 'continuous', 'domain': (0.05, 0.25)},\n",
-    "          {'name': 'mom', 'type': 'continuous', 'domain': (0.85, 0.95)},\n",
-    "          {'name': 'num_lay', 'type': 'discrete', 'domain': range(1, 4)},\n",
-    "          {'name': 'num_c', 'type': 'discrete', 'domain': range(8, 22, 2)},\n",
-    "          {'name': 'num_fc', 'type': 'discrete', 'domain': range(10, 105, 5)},\n",
-    "          {'name': 'dropout', 'type': 'discrete', 'domain': np.linspace(0, 0.4, 11)},\n",
-    "          {'name': 'bs', 'type': 'discrete', 'domain': range(64, 288, 32)},\n",
-    "          ]"
+    "opt_BO = [\n",
+    "    {\"name\": \"lr\", \"type\": \"continuous\", \"domain\": (0.05, 0.25)},\n",
+    "    {\"name\": \"mom\", \"type\": \"continuous\", \"domain\": (0.85, 0.95)},\n",
+    "    {\"name\": \"num_lay\", \"type\": \"discrete\", \"domain\": range(1, 4)},\n",
+    "    {\"name\": \"num_c\", \"type\": \"discrete\", \"domain\": range(8, 22, 2)},\n",
+    "    {\"name\": \"num_fc\", \"type\": \"discrete\", \"domain\": range(10, 105, 5)},\n",
+    "    {\"name\": \"dropout\", \"type\": \"discrete\", \"domain\": np.linspace(0, 0.4, 11)},\n",
+    "    {\"name\": \"bs\", \"type\": \"discrete\", \"domain\": range(64, 288, 32)},\n",
+    "]"
    ]
   },
   {
@@ -113,28 +118,43 @@
    "source": [
     "class ConvBnRelu(nn.Module):\n",
     "    \"\"\"Re-usable building block implementing 2d conv layer with batch-norm and relu activation\"\"\"\n",
+    "\n",
     "    def __init__(self, in_channels, out_channels, p):\n",
     "        super().__init__()\n",
-    "        self.conv = nn.Sequential(nn.Conv2d(in_channels, out_channels, kernel_size=5),  # reduces feature map by 4\n",
-    "                                  nn.BatchNorm2d(out_channels),\n",
-    "                                  nn.Dropout2d(p=p, inplace=True),\n",
-    "                                  nn.ReLU(inplace=True)\n",
-    "                                  )\n",
+    "        self.conv = nn.Sequential(\n",
+    "            nn.Conv2d(\n",
+    "                in_channels, out_channels, kernel_size=5\n",
+    "            ),  # reduces feature map by 4\n",
+    "            nn.BatchNorm2d(out_channels),\n",
+    "            nn.Dropout2d(p=p, inplace=True),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.conv(x)\n",
     "\n",
+    "\n",
     "class FlexCNN(nn.Module):\n",
     "    \"\"\"Simple CNN with flexible capacity\"\"\"\n",
-    "    def __init__(self, n_lay=2, n_c=16, n_fc=25, dropout=0.1, hw=(28,28)):\n",
+    "\n",
+    "    def __init__(self, n_lay=2, n_c=16, n_fc=25, dropout=0.1, hw=(28, 28)):\n",
     "        super().__init__()\n",
-    "        self.name = 'flex_cnn'\n",
-    "        self.init_args = {'n_lay':n_lay, 'n_c':n_c, 'n_fc':n_fc}  # for loading back model with correct size\n",
+    "        self.name = \"flex_cnn\"\n",
+    "        self.init_args = {\n",
+    "            \"n_lay\": n_lay,\n",
+    "            \"n_c\": n_c,\n",
+    "            \"n_fc\": n_fc,\n",
+    "        }  # for loading back model with correct size\n",
     "        self.h, self.w = hw\n",
     "        self.out_hw = self.h - (n_lay + 1) * 4\n",
     "        self.out_c = n_c * (2 ** n_lay)\n",
     "        self.convs = nn.ModuleList([ConvBnRelu(1, n_c, dropout)])\n",
-    "        self.convs.extend([ConvBnRelu((2 ** (i - 1)) * n_c, (2 ** i) * n_c, dropout) for i in range(1, n_lay + 1)])\n",
+    "        self.convs.extend(\n",
+    "            [\n",
+    "                ConvBnRelu((2 ** (i - 1)) * n_c, (2 ** i) * n_c, dropout)\n",
+    "                for i in range(1, n_lay + 1)\n",
+    "            ]\n",
+    "        )\n",
     "        self.fc1 = nn.Linear(self.out_c * (self.out_hw ** 2), n_fc * 2)\n",
     "        self.fc2 = nn.Linear(n_fc * 2, 10)\n",
     "\n",
@@ -228,27 +248,60 @@
     "@utils.call_counter\n",
     "def f_opt_mnist(parameters):\n",
     "    parameters = parameters[0]  # np.ndarray passed in is nested\n",
-    "    print(f'---------Starting Bay opt call {f_opt_mnist.calls} with parameters: ---------')\n",
+    "    print(\n",
+    "        f\"---------Starting Bay opt call {f_opt_mnist.calls} with parameters: ---------\"\n",
+    "    )\n",
     "    utils.print_params(parameters, opt_BO)\n",
     "    # Data loading:\n",
-    "    trainset = torchvision.datasets.MNIST(root='../data', train=True, download=True, transform=dp.mnist_transform)\n",
-    "    trainloader = torch.utils.data.DataLoader(trainset, batch_size=int(parameters[6]), shuffle=True, num_workers=8)\n",
-    "    testset = torchvision.datasets.MNIST(root='../data', train=False, download=True, transform=dp.mnist_transform)\n",
-    "    testloader = torch.utils.data.DataLoader(testset, batch_size=int(parameters[6]), shuffle=False, num_workers=8)\n",
-    "    train_dl, valid_dl = dp.WrapDL(trainloader, dp.to_gpu), dp.WrapDL(testloader, dp.to_gpu)\n",
+    "    trainset = torchvision.datasets.MNIST(\n",
+    "        root=\"../data\", train=True, download=True, transform=dp.mnist_transform\n",
+    "    )\n",
+    "    trainloader = torch.utils.data.DataLoader(\n",
+    "        trainset, batch_size=int(parameters[6]), shuffle=True, num_workers=8\n",
+    "    )\n",
+    "    testset = torchvision.datasets.MNIST(\n",
+    "        root=\"../data\",\n",
+    "        train=False,\n",
+    "        download=True,\n",
+    "        transform=dp.mnist_transform,\n",
+    "    )\n",
+    "    testloader = torch.utils.data.DataLoader(\n",
+    "        testset, batch_size=int(parameters[6]), shuffle=False, num_workers=8\n",
+    "    )\n",
+    "    train_dl, valid_dl = (\n",
+    "        dp.WrapDL(trainloader, dp.to_gpu),\n",
+    "        dp.WrapDL(testloader, dp.to_gpu),\n",
+    "    )\n",
     "\n",
     "    # Model definition:\n",
-    "    model = m.FlexCNN(n_lay=int(parameters[2]),\n",
-    "                        n_c=int(parameters[3]),\n",
-    "                        n_fc=int(parameters[4]),\n",
-    "                        dropout=parameters[5])\n",
+    "    model = m.FlexCNN(\n",
+    "        n_lay=int(parameters[2]),\n",
+    "        n_c=int(parameters[3]),\n",
+    "        n_fc=int(parameters[4]),\n",
+    "        dropout=parameters[5],\n",
+    "    )\n",
     "    model.to(dev)\n",
     "    # Optimizer:\n",
-    "    opt = optim.SGD(model.parameters(), lr=parameters[0], momentum=parameters[1])\n",
-    "    scheduler = optim.lr_scheduler.CyclicLR(opt, parameters[0], parameters[0]*3,\n",
-    "                                            step_size_up=int(len(train_dl)*int(parameters[6])*epochs*0.25))\n",
+    "    opt = optim.SGD(\n",
+    "        model.parameters(), lr=parameters[0], momentum=parameters[1]\n",
+    "    )\n",
+    "    scheduler = optim.lr_scheduler.CyclicLR(\n",
+    "        opt,\n",
+    "        parameters[0],\n",
+    "        parameters[0] * 3,\n",
+    "        step_size_up=int(len(train_dl) * int(parameters[6]) * epochs * 0.25),\n",
+    "    )\n",
     "    # Fit:\n",
-    "    score = train.fit(epochs, model, loss_func, scheduler, train_dl, valid_dl, train.accuracy, model_folder)\n",
+    "    score = train.fit(\n",
+    "        epochs,\n",
+    "        model,\n",
+    "        loss_func,\n",
+    "        scheduler,\n",
+    "        train_dl,\n",
+    "        valid_dl,\n",
+    "        train.accuracy,\n",
+    "        model_folder,\n",
+    "    )\n",
     "    return np.array(score)"
    ]
   },
@@ -268,8 +321,10 @@
     "plot = True\n",
     "loss_func = F.cross_entropy\n",
     "opt_func = f_opt_mnist\n",
-    "cleanup_models_dir = True  # will delete models from model_folder before running\n",
-    "model_folder = '../models/mnist/'\n",
+    "cleanup_models_dir = (\n",
+    "    True  # will delete models from model_folder before running\n",
+    ")\n",
+    "model_folder = \"../models/mnist/\"\n",
     "epochs = 4\n",
     "max_iter = 2"
    ]
@@ -346,19 +401,23 @@
     }
    ],
    "source": [
-    "utils.setup_folders(model_folder) # create folders if don't exist\n",
-    "if cleanup_models_dir: utils.clean_folder(model_folder)  # delete models from previous runs\n",
+    "utils.setup_folders(model_folder)  # create folders if don't exist\n",
+    "if cleanup_models_dir:\n",
+    "    utils.clean_folder(model_folder)  # delete models from previous runs\n",
     "# GPyOpt function call:\n",
-    "optimizer = BayesianOptimization(f=opt_func,  # objective function\n",
-    "                 domain=opt_BO,\n",
-    "                 model_type='GP',\n",
-    "                 acquisition_type='EI',\n",
-    "                 normalize_Y=True,\n",
-    "                 acquisition_jitter=0.05,  # positive value to make acquisition more explorative\n",
-    "                 exact_feval=False,  # whether the outputs are exact\n",
-    "                 maximize=False,\n",
-    "                )\n",
-    "optimizer.run_optimization(max_iter=max_iter)  # 5 initial exploratory points + max_iter"
+    "optimizer = BayesianOptimization(\n",
+    "    f=opt_func,  # objective function\n",
+    "    domain=opt_BO,\n",
+    "    model_type=\"GP\",\n",
+    "    acquisition_type=\"EI\",\n",
+    "    normalize_Y=True,\n",
+    "    acquisition_jitter=0.05,  # positive value to make acquisition more explorative\n",
+    "    exact_feval=False,  # whether the outputs are exact\n",
+    "    maximize=False,\n",
+    ")\n",
+    "optimizer.run_optimization(\n",
+    "    max_iter=max_iter\n",
+    ")  # 5 initial exploratory points + max_iter"
    ]
   },
   {
@@ -392,8 +451,8 @@
    "source": [
     "if plot:\n",
     "    plotting.plot_convergence(optimizer.X, optimizer.Y_best)\n",
-    "print('--------------------------------------------------')\n",
-    "print('Optimal parameters from Bay opt are:')\n",
+    "print(\"--------------------------------------------------\")\n",
+    "print(\"Optimal parameters from Bay opt are:\")\n",
     "utils.print_params(optimizer.x_opt, opt_BO)"
    ]
   },
