--- a/notebooks/Using_GPyOpt_to_tune_NN.ipynb
+++ b/notebooks/Using_GPyOpt_to_tune_NN.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\*One might counter than no trial is wasted as it's information for the GP to reduce it's uncertainty and this is definitely true, however, too many poor trials can leave the experimenter wondering if the experiment itself is flawed rather than just the individual trial settings."
+    "\\*One might counter than no trial is wasted as it's information for the GP to reduce its uncertainty and this is definitely true, however, too many poor trials can leave the experimenter wondering if the experiment itself is flawed rather than just the individual trial settings."
    ]
   }
  ],
