--- a/notebooks/Using_GPyOpt_to_tune_NN.ipynb
+++ b/notebooks/Using_GPyOpt_to_tune_NN.ipynb
@@ -168,7 +168,7 @@
     "def f_opt_mnist(parameters):\n",
     "    parameters = parameters[0]  # np.ndarray passed in is nested\n",
     "    print(\n",
-    "        f\"---------Starting Bay opt call {f_opt_mnist.calls} with parameters: ---------\"\n",
+    "        f\"\\n ---------Starting Bay opt call {f_opt_mnist.calls} with parameters: ---------\"\n",
     "    )\n",
     "    utils.print_params(parameters, opt_BO)\n",
     "    # Data loading:\n",
@@ -201,9 +201,7 @@
     "    )\n",
     "\n",
     "    # Optimizer:\n",
-    "    opt = optim.SGD(\n",
-    "        model.parameters(), lr=parameters[0], momentum=parameters[1]\n",
-    "    )\n",
+    "    opt = optim.SGD(model.parameters(), lr=parameters[0], momentum=parameters[1])\n",
     "    scheduler = optim.lr_scheduler.CyclicLR(\n",
     "        opt,\n",
     "        parameters[0],\n",
@@ -247,9 +245,7 @@
     "plot = True\n",
     "loss_func = F.cross_entropy\n",
     "opt_func = f_opt_mnist\n",
-    "cleanup_models_dir = (\n",
-    "    True  # will delete models from model_folder before running\n",
-    ")\n",
+    "cleanup_models_dir = True  # will delete models from model_folder before running\n",
     "model_folder = \"../models/mnist/\"\n",
     "epochs = 4\n",
     "max_iter = 2"
@@ -286,7 +282,13 @@
       "\n",
       "e: 1, trn loss: 0.7613, val loss: 0.1851, val met: 0.9446, in: 120 secs\n",
       "e: 2, trn loss: 0.2861, val loss: 0.1274, val met: 0.9627, in: 125 secs\n",
-      "e: 3, trn loss: 0.2468, val loss: 0.1193, val met: 0.9651, in: 126 secs\n"
+      "e: 3, trn loss: 0.2468, val loss: 0.1193, val met: 0.9651, in: 126 secs\n",
+      "e: 4, trn loss: 0.1976, val loss: 0.0934, val met: 0.9717, in: 125 secs\n",
+      "---------Starting Bay opt call 3 with parameters: ---------\n",
+      "| lr: 0.19 | mom: 0.90 | num_lay: 3.00 | num_c: 20.00 | num_fc: 45.00 | dropout: 0.24 | bs: 224.00 |\n",
+      "\n",
+      "e: 1, trn loss: 2.2494, val loss: 0.6160, val met: 0.7972, in: 195 secs\n",
+      "e: 2, trn loss: 0.8120, val loss: 0.4026, val met: 0.8708, in: 191 secs\n"
      ]
     }
    ],
@@ -306,9 +308,7 @@
     "    exact_feval=False,  # whether the outputs are exact\n",
     "    maximize=False,\n",
     ")\n",
-    "optimizer.run_optimization(\n",
-    "    max_iter=max_iter\n",
-    ")  # 5 initial exploratory points + max_iter"
+    "optimizer.run_optimization(max_iter=max_iter)  # 5 initial exploratory points + max_iter"
    ]
   },
   {
